# cv_labs

lab_2/: CMakeLists.txt
lab_2/src/: box_filter.cpp  main.cpp
lab_3/src/: task1.cpp  task2.cpp  task3.cpp
lab_4/: CMakeLists.txt
lab_4/src/: task1.cpp
lab_5/: CMakeLists.txt  detector_params.yml  main.cpp  params.xml
